--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="var" path="opencv" sourcepath="opencv.sources"/>
 	<classpathentry kind="var" path="cscore" sourcepath="cscore.sources"/>
 	<classpathentry kind="lib" path="/Users/Charles/Downloads/RIOdroid-master/release/RIOdroid v0.1/RIOdroid.jar"/>
+	<classpathentry kind="lib" path="/Users/Charles/Downloads/FRC-2016-Public-master/lib/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
