--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="var" path="opencv" sourcepath="opencv.sources"/>
 	<classpathentry kind="var" path="cscore" sourcepath="cscore.sources"/>
-	<classpathentry kind="lib" path="/Users/Charles/Downloads/RIOdroid-master/release/RIOdroid v0.1/RIOdroid.jar"/>
-	<classpathentry kind="lib" path="/Users/Charles/Downloads/FRC-2016-Public-master/lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/maara/wpilib/user/java/lib/RIOdroid.jar"/>
+	<classpathentry kind="var" path="USERLIBS_DIR/navx_frc.jar"/>
+	<classpathentry kind="var" path="USERLIBS_DIR/RIOdroid.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
